cors config support, Security function added (generate_key)

--- a/app/app/config.json
+++ b/app/app/config.json
@@ -1,8 +1,8 @@
 {
   "NAME": "EvernodeTest",
   "DEBUG": true,
-  "SERECT": "TeSTSeCret",
-  "KEY": "SomEKeY-LL=",
+  "SERECT": "65C45AA38EF19A52D1213FBCAEE3665C45AA38EF19A52D1213FBCAEE36",
+  "KEY": "sgmABbi6V5DLmLsjCAkf68UHYYIJEtGF714MnmPRSp4=",
   "DATETIME": {
     "TIMEZONE": "UTC",
     "DATE_FORMAT": "%Y-%m-%d",
@@ -12,12 +12,24 @@
   "DEFAULT_LANGUAGE": "en",
   "HOST": "localhost",
   "SQLALCHEMY_TRACK_MODIFICATIONS": false,
-  "SQLALCHEMY_ECHO": false,
+  "SQLALCHEMY_ECHO": true,
   "API": {
     "VERSION": "1",
     "PREFIX": "v{version}"
   },
+  "CORS": {
+    "ALLOW_HEADERS": [
+      "Origin",
+      "Content-Type",
+      "Accept",
+      "Authorization",
+      "X-Request-With",
+      "Content-Language"
+    ]
+  },
   "AUTH": {
+    "JWT_EXP_SECS": 360,
+    "FAST_SESSIONS": true,
     "MAX_SESSIONS": 1,
     "USER_FIELD": "email",
     "PASSWORD_FIELD": "password",
@@ -26,6 +38,6 @@
   "SQLALCHEMY_POOL_SIZE": 100,
   "SQLALCHEMY_POOL_RECYCLE": 280,
   "SQLALCHEMY_BINDS": {
-    "DEFAULT": "mysql://test:password@localhost/test"
+    "DEFAULT": "mysql://api_user:password@172.27.0.121/api"
   }
 }
