removed User class, and created UserAuth class. session() creates a jwt token if username and password POST data present. renamed decorator load_middleware -> middleware

--- a/app/app/config.json
+++ b/app/app/config.json
@@ -38,11 +38,11 @@
     "JWT_EXP_SECS": 360,
     "FAST_SESSIONS": true,
     "MAX_SESSIONS": 1,
-    "USER_FIELD": "email",
+    "USERNAME_FIELD": "email",
     "PASSWORD_FIELD": "password",
     "PASSWORD_HASHING": "pbkdf2:sha512"
   },
-  "MAX_CONTENT_LENGTH": 20000000
+  "MAX_CONTENT_LENGTH": 2000000,
   "SQLALCHEMY_POOL_SIZE": 100,
   "SQLALCHEMY_POOL_RECYCLE": 280,
   "SQLALCHEMY_BINDS": {
