fixed api prefix handler. removed api_prefix() from app class. api prefix will strip url slash if in prefix. app class now takes a prefix karg to override config prefix or instead of setting a config prefix

--- a/app/app/config.json
+++ b/app/app/config.json
@@ -15,7 +15,7 @@
   "SQLALCHEMY_ECHO": true,
   "API": {
     "VERSION": "1",
-    "PREFIX": "v{version}"
+    "PREFIX": "v{v}"
   },
   "UPLOADS": {
     "FOLDER": "/srv/uploads",
