new debuging for load_modules. updated test_app, flask app test, more to come. Added useful libraries for Oauth and OTP in build.md. Restructured how evernode demo app should look, config in root app folder. refactor of loading default database and SQLAlchemy init in app class. added uploads folder and logs folder to demo app in git

--- a/app/app/uwsgi.ini
+++ b/app/app/uwsgi.ini
@@ -3,7 +3,7 @@ uid = www-data
 gid = www-data
 module = app
 chdir = /srv/app
-pythonpath = /srv/app
+pythonpath = /srv/app/
 wsgi-file = /srv/app/app.py
 master = true
 processes = 4
