--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Test App
+# Demo App
 app/app/logs/*
 !app/app/logs/.gitkeep 
 app/app/uploads/*
@@ -28,3 +28,4 @@ build.txt
 .coverage
 .tox
 .cache
+tests/root_path.txt
