fixed for issue#39

--- a/app/app/config.json
+++ b/app/app/config.json
@@ -64,6 +64,6 @@
   "SQLALCHEMY_POOL_SIZE": 100,
   "SQLALCHEMY_POOL_RECYCLE": 280,
   "SQLALCHEMY_BINDS": {
-    "DEFAULT": "mysql://api_user:password@ip/api"
+    "DEFAULT": "mysql://api_user:password@10.0.75.1/enode"
   }
 }
