--- a/app/app/config.json
+++ b/app/app/config.json
@@ -59,6 +59,7 @@
     "PASSWORD_HASHING": "pbkdf2:sha512"
   },
   "MAX_CONTENT_LENGTH": 2000000,
+  "DISABLE_DATABASE": true,
   "SQLALCHEMY_TRACK_MODIFICATIONS": false,
   "SQLALCHEMY_ECHO": true,
   "SQLALCHEMY_POOL_SIZE": 100,
